Add transparency && IoR using deferred rendering

--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -71,6 +71,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "7c8c8c6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "refract_available = True"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "ad26b756-227e-49f5-aeea-868e0e988eb8",
    "metadata": {},
@@ -83,7 +93,7 @@
     "import os\n",
     "\n",
     "# NAME = 'sedan'\n",
-    "NAME = 'teapot'\n",
+    "NAME = 'toaster'\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# for small synthetic dataset\n",
@@ -93,7 +103,6 @@
     "# for large real dataset\n",
     "# args.model_path = \"../output/ref-real/\" + NAME\n",
     "# args.source_path = \"../data/ref-real/\" + NAME\n",
-    "\n",
     "args.resolution = 1\n",
     "args.images = \"images\"\n",
     "args.white_background = False\n",
@@ -142,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "3832d666-f10a-4671-91c9-901b477edc7d",
    "metadata": {},
    "outputs": [],
@@ -202,8 +211,9 @@
     "    gs_albedo = pc.get_albedo\n",
     "    gs_roughness = pc.get_roughness\n",
     "    gs_feature = pc.get_language_feature\n",
+    "    gs_ior = pc.get_ior\n",
     "\n",
-    "    input_ts = torch.cat([gs_roughness, gs_feature], dim=-1)\n",
+    "    input_ts = torch.cat([gs_roughness, gs_ior, gs_feature], dim=-1)\n",
     "    \n",
     "    albedo_map, out_ts, radii, allmap = rasterizer_black(\n",
     "        means3D = means3D,\n",
@@ -247,8 +257,9 @@
     "    out_ts = out_ts.permute(1,2,0)\n",
     "    \n",
     "    albedo_map = albedo_map.permute(1,2,0)\n",
-    "    roughness_map = out_ts[..., :1]\n",
-    "    feature_map = out_ts[..., 1:]\n",
+    "    roughness_map = out_ts[..., 0:1]\n",
+    "    ior_map = out_ts[..., 1:2]\n",
+    "    feature_map = out_ts[..., 2:]\n",
     "    \n",
     "    #####################################################################################################################\n",
     "    with torch.no_grad():\n",
@@ -258,7 +269,8 @@
     "    normals = normals.reshape(-1, 3)[select_index]\n",
     "    roughness_map = roughness_map.reshape(-1, 1)[select_index]\n",
     "    albedo_map = albedo_map.reshape(-1, 3)[select_index]\n",
-    "    \n",
+    "    ior_map = ior_map.reshape(-1, 1)[select_index]\n",
+    "\n",
     "    feature_map = feature_map.reshape(-1, pc.gsfeat_dim)[select_index]\n",
     "    feature_map = F.normalize(feature_map, dim=-1)\n",
     "    \n",
@@ -284,10 +296,67 @@
     "    mlp_output = pc.light_mlp(input_mlp).float()\n",
     "    spec_light = torch.exp(torch.clamp(mlp_output, max=5.0))\n",
     "    \n",
+    "    \n",
+    "    # Refraction color\n",
+    "    if refract_available:\n",
+    "        incident_dir = viewdirs.reshape(-1, 3)[select_index]  # 从相机到表面的方向\n",
+    "        surface_normals = normals  # 表面法线\n",
+    "        \n",
+    "        # 折射率处理：限制在合理范围内，避免极端值\n",
+    "        ior_values = torch.clamp(ior_map, min=1.0, max=3.0)    \n",
+    "        # from incident to exitant\n",
+    "        # eta1 / eta2\n",
+    "        eta = 1.0 / ior_values\n",
+    "        wt, total_reflection = refract(incident_dir, surface_normals, eta)\n",
+    "        cos_theta_i = torch.clamp(-torch.sum(incident_dir * surface_normals, dim=-1, keepdim=True), 0.0, 1.0)\n",
+    "        # Fresnel ratio \n",
+    "        f0 = ((ior_values - 1.0) / (ior_values + 1.0)) ** 2  # 垂直入射时的反射率\n",
+    "        fresnel = fresnel_schlick(cos_theta_i, f0)\n",
+    "        \n",
+    "        # Sph-Mip for refraction\n",
+    "        # we know wt must be non-zero if it is not total internal reflection\n",
+    "        valid_refraction = ~total_reflection.squeeze(-1)\n",
+    "        \n",
+    "        if valid_refraction.sum() > 0:\n",
+    "            wt_valid = wt[valid_refraction]\n",
+    "            wt_xy = (cart2sph(wt_valid.reshape(-1, 3)[..., [0,1,2]])[..., 1:] / \n",
+    "                    torch.Tensor([[np.pi, 2*np.pi]]).to(device))[..., [1,0]]\n",
+    "            wt_xyz = torch.stack([wt_xy[:, None, :]], dim=0)\n",
+    "            \n",
+    "            # like spec_level\n",
+    "            refract_level = roughness_map[valid_refraction].reshape(-1, 1)\n",
+    "            refract_feat = pc.dir_encoding(wt_xyz, refract_level.view(-1, 1), index=0).reshape(-1, pc.sph_dim)\n",
+    "            \n",
+    "            refract_feat_wrap = refract_feat.reshape(-1, pc.sph_dim, 1)\n",
+    "            refract_feat_dirc = refract_feat.reshape(-1, pc.sph_dim)\n",
+    "            \n",
+    "            # 折射光照计算\n",
+    "            feature_map_valid = feature_map[valid_refraction]\n",
+    "            refract_wrap_input = (refract_feat_wrap @ feature_map_valid).reshape(-1, pc.sph_dim * pc.gsfeat_dim)\n",
+    "            refract_input_mlp = torch.cat([refract_wrap_input, refract_feat_dirc], -1)\n",
+    "            \n",
+    "            # 使用相同的MLP或可以定义专门的折射MLP\n",
+    "            refract_mlp_output = pc.refract_mlp(refract_input_mlp).float()\n",
+    "            refract_light_valid = torch.exp(torch.clamp(refract_mlp_output, max=5.0))\n",
+    "            \n",
+    "            # 创建完整的折射光数组\n",
+    "            refract_light = torch.zeros_like(spec_light)\n",
+    "            refract_light[valid_refraction] = refract_light_valid\n",
+    "        else:\n",
+    "            refract_light = torch.zeros_like(spec_light)\n",
+    "    \n",
     "    # Diffuse color\n",
     "    diff_light = albedo_map\n",
+    "\n",
+    "    # Refraction color\n",
+    "    transparency = 0.0 if not refract_available else torch.clamp((ior_values - 1.0) / 2.0, 0.0, 1.0)  \n",
+    "    fresnel = 1.0 if not refract_available else fresnel\n",
+    "    reflection_contrib = fresnel * spec_light\n",
+    "    refraction_contrib = 0.0 if not refract_available else (1.0 - fresnel) * transparency * refract_light\n",
+    "    diffuse_contrib = (1.0 - transparency) * diff_light\n",
     "    \n",
-    "    pbr_rgb = spec_light + diff_light\n",
+    "    # pbr_rgb = spec_light + diff_light\n",
+    "    pbr_rgb = reflection_contrib + refraction_contrib + diffuse_contrib     \n",
     "    pbr_rgb = linear2srgb(pbr_rgb)\n",
     "    pbr_rgb = torch.clamp(pbr_rgb, min=0., max=1.)\n",
     "    #####################################################################################################################\n",
@@ -539,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "eb74201e",
    "metadata": {},
    "outputs": [],
